syntax = "proto3";

package chat;
option go_package="../proto/chat";

import "google/protobuf/timestamp.proto";

service OnLineChat {
  rpc SayHi(stream HiRequest) returns (stream HiReply) {};
}

message HiRequest {
  string name = 1;
  string message = 2;
}

message HiReply {
  string message = 1;
  google.protobuf.Timestamp TS = 2;
  MessageType message_type = 3;

  enum MessageType{
    CONNECT_SUCCESS = 0;
    CONNECT_FAILED = 1;
    NORMAL_MESSAGE = 2;
  }
}